Microservices/g3-authentication-service/src/main/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: g3pmscapstone.in
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: authentication-svc
                port:
                  name: http
